--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-window.location.replace('https://api-portal.nyc.gov/')
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Redirect to a Webpage</h2>
+<p>The replace() method replaces the current document with a new one:</p>
+
+<button onclick="myFunction()">Replace document</button>
+
+<script>
+function myFunction() {
+  location.replace("https://api-portal.nyc.gov")
+}
+</script>
+
+</body>
+</html> 
